<resources>
    <string name="app_name">WMSTest</string>
    <string name="UrlDefault">https://neo.sci.gsfc.nasa.gov/wms/wms</string>
    <string name="VersionDefault">1.3.0</string>
    <string name="TileFormatDefault">image/png</string>
    <string name="TransparentDefault">true</string>
    <string name="LayersDefault">set1</string>
    <string name="ResolutionDefault">1.0</string>
    <string name="CancelButton">Cancel</string>
    <string name="OKButton">OK</string>
    <string name="RemoveButton">Remove</string>
    <string name="LoopButton">Loop</string>

    <!-- from joystick interface -->
    <string name="window_icon">Window icon</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="corner">Corner</string>
    <string name="maximize">Maximize</string>
    <string-array name="wms_versions">
        <item>VERSION_1_3_0</item>
        <item>VERSION_1_1</item>
        <item>VERSION_1_1_1</item>
    </string-array>
    <string-array name="boolean_values">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string-array name="image_formats">
        <item>image/png</item>
        <item>image/jpeg</item>
    </string-array>
    <string name="sample">MOD_LSTD_CLIM_M</string>
</resources>
